# tdlg

./: .gitignore  Cargo.toml  LICENSE.md  README.md
assets/: builds_room_from_funky_text.txt
examples/: print_full_grid.rs
src/: cell.rs  coordinate.rs  generator.rs  grid.rs  lib.rs  loading.rs  map.rs  room.rs
src/cells/: cell.rs  layer.rs  mod.rs
src/generation/: builder.rs  error.rs  generator.rs  item_generation.rs  mod.rs
src/generation/assets/: mod.rs  room_templates.rs
src/loading/: mod.rs  room_paths.rs
src/map/: biome.rs  grid.rs  mod.rs  room.rs  top_down_map.rs
src/map/cells/: cell.rs  coordinate.rs  layer.rs  mod.rs
src/map/layers/: floor_type.rs  item_rarity.rs  layer_type.rs  mod.rs  structure_type.rs
