[package]
name = "tdlg"
version = "0.1.2"
edition = "2021"
description = "Generates a grid of cells that could be used to build a top-down game map. Used by me to learn Rust."
license = "MIT"
keywords = ["gamedev"]
readme = "README.md"
repository = "https://github.com/derrickp/tdlg"
exclude = [".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
rand_pcg = "0.3.1"
rand_seeder = "0.2.2"
walkdir = "2.3.2"
