[package]
name = "tdlg"
version = "2.0.1"
edition = "2021"
description = "Generates a grid of cells that could be used to build a top-down game map. Used by me to learn Rust."
license = "MIT"
keywords = ["gamedev"]
readme = "README.md"
repository = "https://github.com/derrickp/tdlg"
exclude = [".*"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pathfinding = "4.2.1"
rand = "0.8"
rand_pcg = "0.3"
rand_seeder = "0.2"
serde = { version = "1.0", features = ["derive"] }
walkdir = "2.3"

[dev-dependencies]
serde_json = "1.0"
